PLAT-4708 - Split ServerRunner into ServerProcess and ViewRunner